public enum LandmarkType {
    GEOLOGICAL,
    BIOLOGICAL,
    CULTURAL
}
